Second push: Completed babylm augment pipeline (fix a very small bug in chunk_ids handling)

--- a/pretrain_data_augment.ipynb
+++ b/pretrain_data_augment.ipynb
@@ -624,11 +624,11 @@
         "chunk_size"
       ],
       "metadata": {
-        "id": "q2UjbmXW_y9U",
-        "outputId": "3e3168dd-fb70-4f30-9930-a7093b5ded9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q2UjbmXW_y9U",
+        "outputId": "3e3168dd-fb70-4f30-9930-a7093b5ded9f"
       },
       "execution_count": 7,
       "outputs": [
@@ -651,7 +651,7 @@
         "import shutil\n",
         "\n",
         "def augment_and_save_chunks(chunk_ids, batch_size=32):\n",
-        "    if isinstance(chunk_ids, str):\n",
+        "    if isinstance(chunk_ids, int):\n",
         "        chunk_ids = [chunk_ids]\n",
         "    print(f\"Chunks to be processed:\", chunk_ids)\n",
         "    for i in chunk_ids:\n",
