small tweak on grid search visualisation

--- a/pretrain_data_corpus.ipynb
+++ b/pretrain_data_corpus.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,28 +161,28 @@
      "output_type": "stream",
      "text": [
       "{'max_new_tokens': 256, 'temperature': 0.8, 'top_p': 1.0, 'do_sample': True}\n",
-      "i don't really want you to get that job anyway so.\n",
-      "When I was a little girl, I loved to paint. I would spend hours creating beautiful art with all my colors and brushes. My teacher thought it was great and encouraged me to keep drawing. One day, I fou\n",
+      "it wasn't like riding a real horse but it was kind of fun anyway.\n",
+      "Once upon a time, in a small town, there was a boy named Timmy who loved to ride his pretend horse around the neighborhood. It wasn't like riding a real horse, but it was still fun. Timmy would pretend to gallop down the street, with his hands on the reins and his feet on the ground that he pretended to be a horse's hooves. He would pretend to jump over fences and run through fields.Whenever Tim\n",
       "------\n",
       "{'max_new_tokens': 256, 'temperature': 0.7, 'top_p': 1.0, 'do_sample': True}\n",
-      "i don't really want you to get that job anyway so.\n",
-      "Once upon a time, there was a young girl named Lily. She had worked hard to get an interview for her dream job, and she was excited to start her new career. However, when she got the job offer, she wa\n",
+      "it wasn't like riding a real horse but it was kind of fun anyway.\n",
+      "Once upon a time, there was a little girl named Emily who loved animals. She dreamed of being a vet and helping all the creatures in need. One day, Emily's birthday surprise was a special adventure to a nearby farm where she could pet and feed all sorts of animals.As Emily walked through the farm, she saw a big, friendly horse with a long mane and tail. She had never seen a real horse before, bu\n",
       "------\n",
       "{'max_new_tokens': 256, 'temperature': 1.2, 'top_p': 1.0, 'do_sample': True}\n",
-      "i don't really want you to get that job anyway so.\n",
-      "As soon as Emily landed the job of her dreams, her grandmother praised her effort. \"That's great, honey! You worked hard for that!\" Emily smiled widely, relieved that her grandmother didn't disapprove\n",
+      "it wasn't like riding a real horse but it was kind of fun anyway.\n",
+      "Once upon a time, there was a little girl named Jamie. She lived on a farm that had lots of animals, but one day, she decided to go for an adventure. She loved exploring and discovering new things. So, she hopped on her bike and rode into the sunlight to the nearby woods.She had heard stories about a secret meadow in the woods that only a select few had visited before. She had always been curiou\n",
       "------\n",
       "{'max_new_tokens': 256, 'temperature': 0.9, 'top_p': 1.0, 'do_sample': True}\n",
-      "i don't really want you to get that job anyway so.\n",
-      "Once upon a time, there was a young girl named Riley. Riley was super excited to apply for a job at a popular toy store in her town. She had always loved toys and wanted to work with them every day. B\n",
+      "it wasn't like riding a real horse but it was kind of fun anyway.\n",
+      "Once upon a time, there was a boy named Leo who loved adventure. One day, he found out about a magic amusement park that promised to be the most thrilling experience ever. This park was known for its exciting rides and captivating shows that could transport someone from the mundane to the incredible.As Leo arrived at the entrance, he was greeted by the cheerful sounds of children laughing and sc\n",
       "------\n",
       "{'max_new_tokens': 256, 'temperature': 1.0, 'top_p': 1.0, 'do_sample': True}\n",
-      "i don't really want you to get that job anyway so.\n",
-      "\"Once upon a time, there was a boy named Timmy. He really loved playing with his friends outside in the sun. One day, he saw a poster for a new job at an ice cream shop. Timmy was really interested an\n",
+      "it wasn't like riding a real horse but it was kind of fun anyway.\n",
+      "Samantha loved horses. She dreamt of riding one and feeling like a real cowboy, but she didn't have any to ride. That was until her grandparent's surprised her with a special toy horse, just for her. The toy horse was so realistic, it had bristles and hooves that you could touch and even brush.Samantha couldn't wait to show off her toy horse to her friends. She took it to school and showed it to\n",
       "------\n",
       "{'max_new_tokens': 256, 'temperature': 1.1, 'top_p': 1.0, 'do_sample': True}\n",
-      "i don't really want you to get that job anyway so.\n",
-      "Emma was excited about the opportunity to interview for the job she really wanted. But when her colleague said, \"I don't really want you to get that job anyway,\" it suddenly took on a whole new meanin\n",
+      "it wasn't like riding a real horse but it was kind of fun anyway.\n",
+      "Once upon a time, there was a young girl named Lucy who loved fairy tales and magical creatures. She always dreamed of riding a real horse and exploring enchanted forests. One day, she stumbled upon a wonderful land where she got to ride through fields of flowers on an invisible flying pony, just like she always desired.At first, Lucy was a little unsure if she would like this \"flying horse\" exp\n",
       "------\n"
      ]
     }
@@ -208,8 +208,8 @@
     "    data = pickle.load(open(fname, \"rb\"))\n",
     "    if all([data[idx][\"kwargs\"][k] == v for k, v in conditions.items()]):\n",
     "        print(data[idx][\"kwargs\"])\n",
-    "        print(data[idx][\"text\"].replace(\"\\n\", \" \"))\n",
-    "        print(data[idx][\"augmented_text\"].replace(\"\\n\", \" \")[:200])\n",
+    "        print(line_processor(data[idx][\"text\"]))\n",
+    "        print(line_processor(data[idx][\"augmented_text\"][:400]))\n",
     "        print(\"------\")"
    ]
   },
