the version 4 is cleaned and ready for use

--- a/alpaca-instruction/preprocess_emoAlpaca.ipynb
+++ b/alpaca-instruction/preprocess_emoAlpaca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12505\n"
+      "18585\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,22 +45,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12505"
+       "18585"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(emotion_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data cleaning completed. Cleaned data saved to 'emotion_alpaca_v4_cleaned.json'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clean_output(output):\n",
+    "    # Remove any sentences before \"Rewritten\" and after it until the colon (\":\")\n",
+    "    output = re.sub(r'^.*?(?:Rewritten).*?:\\s*', '', output, flags=re.IGNORECASE | re.DOTALL)\n",
+    "    \n",
+    "    # Remove any remaining leading/trailing whitespace\n",
+    "    output = output.strip()\n",
+    "    \n",
+    "    return output\n",
+    "\n",
+    "# Clean the 'rewritten_output' field of each instance\n",
+    "for instance in data:\n",
+    "    rewritten_output = instance['rewritten_output']\n",
+    "    cleaned_output = clean_output(rewritten_output)\n",
+    "    instance['rewritten_output'] = cleaned_output\n",
+    "\n",
+    "# Save the cleaned data back to a new JSON file\n",
+    "with open('emotion_alpaca_v4_cleaned.json', 'w') as file:\n",
+    "    json.dump(data, file, indent=2)\n",
+    "\n",
+    "print(\"Data cleaning completed. Cleaned data saved to 'emotion_alpaca_v4_cleaned.json'.\")"
    ]
   },
   {
