updates num of chunks used to build corpus

--- a/pretrain_data_corpus.ipynb
+++ b/pretrain_data_corpus.ipynb
@@ -9,44 +9,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "babylm_augment/babylm_augment_17.pkl 871\n",
-      "babylm_augment/babylm_augment_16.pkl 871\n",
-      "babylm_augment/babylm_augment_28.pkl 871\n",
-      "babylm_augment/babylm_augment_14.pkl 871\n",
-      "babylm_augment/babylm_augment_15.pkl 871\n",
-      "babylm_augment/babylm_augment_29.pkl 871\n",
-      "babylm_augment/babylm_augment_11.pkl 871\n",
-      "babylm_augment/babylm_augment_10.pkl 871\n",
-      "babylm_augment/babylm_augment_12.pkl 871\n",
-      "babylm_augment/babylm_augment_13.pkl 871\n",
-      "babylm_augment/babylm_augment_0.pkl 871\n",
-      "babylm_augment/babylm_augment_1.pkl 871\n",
-      "babylm_augment/babylm_augment_3.pkl 871\n",
-      "babylm_augment/babylm_augment_89.pkl 871\n",
-      "babylm_augment/babylm_augment_2.pkl 871\n",
-      "babylm_augment/babylm_augment_6.pkl 871\n",
-      "babylm_augment/babylm_augment_7.pkl 871\n",
-      "babylm_augment/babylm_augment_5.pkl 871\n",
-      "babylm_augment/babylm_augment_4.pkl 871\n",
-      "babylm_augment/babylm_augment_9.pkl 871\n",
-      "babylm_augment/babylm_augment_8.pkl 871\n",
-      "babylm_augment/babylm_augment_50.pkl 871\n",
-      "babylm_augment/babylm_augment_51.pkl 871\n",
-      "babylm_augment/babylm_augment_22.pkl 871\n",
-      "babylm_augment/babylm_augment_0_new.pkl 871\n",
-      "babylm_augment/babylm_augment_23.pkl 871\n",
-      "babylm_augment/babylm_augment_21.pkl 871\n",
-      "babylm_augment/babylm_augment_20.pkl 871\n",
-      "babylm_augment/babylm_augment_30.pkl 871\n",
-      "babylm_augment/babylm_augment_24.pkl 871\n",
-      "babylm_augment/babylm_augment_18.pkl 871\n",
-      "babylm_augment/babylm_augment_19.pkl 871\n",
-      "babylm_augment/babylm_augment_25.pkl 871\n",
-      "babylm_augment/babylm_augment_31.pkl 871\n",
-      "babylm_augment/babylm_augment_27.pkl 871\n",
-      "babylm_augment/babylm_augment_33.pkl 871\n",
-      "babylm_augment/babylm_augment_32.pkl 871\n",
-      "babylm_augment/babylm_augment_26.pkl 871\n"
+      "0 babylm_augment/babylm_augment_17.pkl 871\n",
+      "1 babylm_augment/babylm_augment_16.pkl 871\n",
+      "2 babylm_augment/babylm_augment_28.pkl 871\n",
+      "3 babylm_augment/babylm_augment_14.pkl 871\n",
+      "4 babylm_augment/babylm_augment_15.pkl 871\n",
+      "5 babylm_augment/babylm_augment_29.pkl 871\n",
+      "6 babylm_augment/babylm_augment_11.pkl 871\n",
+      "7 babylm_augment/babylm_augment_10.pkl 871\n",
+      "8 babylm_augment/babylm_augment_12.pkl 871\n",
+      "9 babylm_augment/babylm_augment_13.pkl 871\n",
+      "10 babylm_augment/babylm_augment_0.pkl 871\n",
+      "11 babylm_augment/babylm_augment_1.pkl 871\n",
+      "12 babylm_augment/babylm_augment_3.pkl 871\n",
+      "13 babylm_augment/babylm_augment_89.pkl 871\n",
+      "14 babylm_augment/babylm_augment_2.pkl 871\n",
+      "15 babylm_augment/babylm_augment_6.pkl 871\n",
+      "16 babylm_augment/babylm_augment_7.pkl 871\n",
+      "17 babylm_augment/babylm_augment_5.pkl 871\n",
+      "18 babylm_augment/babylm_augment_4.pkl 871\n",
+      "19 babylm_augment/babylm_augment_9.pkl 871\n",
+      "20 babylm_augment/babylm_augment_8.pkl 871\n",
+      "21 babylm_augment/babylm_augment_50.pkl 871\n",
+      "22 babylm_augment/babylm_augment_51.pkl 871\n",
+      "23 babylm_augment/babylm_augment_22.pkl 871\n",
+      "24 babylm_augment/babylm_augment_0_new.pkl 871\n",
+      "25 babylm_augment/babylm_augment_23.pkl 871\n",
+      "26 babylm_augment/babylm_augment_21.pkl 871\n",
+      "27 babylm_augment/babylm_augment_20.pkl 871\n",
+      "28 babylm_augment/babylm_augment_30.pkl 871\n",
+      "29 babylm_augment/babylm_augment_24.pkl 871\n",
+      "30 babylm_augment/babylm_augment_18.pkl 871\n",
+      "31 babylm_augment/babylm_augment_19.pkl 871\n",
+      "32 babylm_augment/babylm_augment_25.pkl 871\n",
+      "33 babylm_augment/babylm_augment_31.pkl 871\n",
+      "34 babylm_augment/babylm_augment_27.pkl 871\n",
+      "35 babylm_augment/babylm_augment_33.pkl 871\n",
+      "36 babylm_augment/babylm_augment_32.pkl 871\n",
+      "37 babylm_augment/babylm_augment_26.pkl 871\n"
      ]
     }
    ],
@@ -65,9 +65,9 @@
     "fnames = [dir_name + f for f in os.listdir(dir_name) if f.endswith(\".pkl\")]\n",
     "\n",
     "data = []\n",
-    "for fname in fnames:\n",
+    "for i, fname in enumerate(fnames):\n",
     "    tmp = pickle.load(open(fname, \"rb\"))\n",
-    "    print(fname, len(tmp))\n",
+    "    print(i, fname, len(tmp))\n",
     "    data += tmp"
    ]
   },
