--- a/pretrain_data_corpus.ipynb
+++ b/pretrain_data_corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        " 'augmented_text': \"Emma had always been afraid of the dark. She would hide under her covers, squeezing her eyes shut and praying for the sun to rise. One night, she heard a strange noise coming from her closet. She shook her head, trying to convince herself it was just her imagination, but the noise grew louder and more persistent. Suddenly, she felt a cold hand on her shoulder, and she froze. She looked up, and her eyes widened in fear as she saw a shadowy figure standing in front of her. Emma tried to scream, but no sound came out. She felt a hand over her mouth, and she struggled to breathe. Just when she thought she was going to be taken away, the hand was lifted, and the figure disappeared. Emma sat up, panting and shaking. She realized that she had been so scared that she had imagined the whole thing. But the fear stayed with her, and she couldn't shake it off. From that day on, she was always on high alert, always looking over her shoulder, always expecting something terrible to happen.\"}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Counter({'data/babylm_data/babylm_100M/bnc_spoken.train': 20368,\n",
+       "         'data/babylm_data/babylm_100M/cbt.train': 17420,\n",
        "         'data/babylm_data/babylm_100M/aochildes.train': 11859,\n",
-       "         'data/babylm_data/babylm_100M/cbt.train': 871,\n",
        "         'data/babylm_data/babylm_10M/simple_wikipedia.train': 1,\n",
        "         'data/babylm_data/babylm_10M/wikipedia.train': 1})"
       ]
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8929873 269.7846827794562\n"
+      "13725438 276.44943503393824\n"
      ]
     }
    ],
@@ -99,17 +99,25 @@
     "Word count of corpus (8.9M words ~ strict-small track)\n",
     "\"\"\"\n",
     "total_word_count = sum([len(d['augmented_text'].split()) for d in data])\n",
-    "print(total_word_count, total_word_count / len(data))\n",
-    "\n",
+    "print(total_word_count, total_word_count / len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_size = \"13-7M\"\n",
     "\"\"\"\n",
     "Save the pretraining corpus\n",
     "\"\"\"\n",
-    "pickle.dump(data, open(\"babylm_pretrain_corpus/babylm_emo_wiki_10M.pkl\", \"wb\"))\n",
+    "pickle.dump(data, open(f\"babylm_pretrain_corpus/babylm_emo_wiki_{corpus_size}.pkl\", \"wb\"))\n",
     "\n",
     "\"\"\"\n",
     "write log in file\n",
     "\"\"\"\n",
-    "with open(\"babylm_pretrain_corpus/babylm_emo_wiki_10M.txt\", \"w\") as f:\n",
+    "with open(f\"babylm_pretrain_corpus/babylm_emo_wiki_{corpus_size}.txt\", \"w\") as f:\n",
     "    f.write(\"\\n\".join(log))"
    ]
   },
