--- a/pretrain_data_corpus.ipynb
+++ b/pretrain_data_corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,9 @@
     "\"\"\"\n",
     "dir_name = \"babylm_augment/\"\n",
     "fnames = [dir_name + f for f in os.listdir(dir_name) if f.endswith(\".pkl\")]\n",
+    "# This is how to build the old corpus\n",
+    "# skip = [i for i in range(70, 89)]\n",
+    "# fnames = [f for f in fnames if int(f.split(\"_\")[3][:2].rstrip(\"_.\")) not in skip]\n",
     "\n",
     "data, log = [], []\n",
     "for i, fname in enumerate(fnames):\n",
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +43,7 @@
        " 'augmented_text': \"Emma had always been afraid of the dark. She would hide under her covers, squeezing her eyes shut and praying for the sun to rise. One night, she heard a strange noise coming from her closet. She shook her head, trying to convince herself it was just her imagination, but the noise grew louder and more persistent. Suddenly, she felt a cold hand on her shoulder, and she froze. She looked up, and her eyes widened in fear as she saw a shadowy figure standing in front of her. Emma tried to scream, but no sound came out. She felt a hand over her mouth, and she struggled to breathe. Just when she thought she was going to be taken away, the hand was lifted, and the figure disappeared. Emma sat up, panting and shaking. She realized that she had been so scared that she had imagined the whole thing. But the fear stayed with her, and she couldn't shake it off. From that day on, she was always on high alert, always looking over her shoulder, always expecting something terrible to happen.\"}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,13 +61,13 @@
     "    tmp = line_processor(open(source).read())\n",
     "    tmp_dict = {\"source\": source, \"text\": None, \"emotion\": None, \"augmented_text\": tmp}\n",
     "    data.append(tmp_dict)\n",
-    "    log.append(f\"factual-{i}, {source}, {len(tmp)}\")\n",
+    "    log.append(f\"factual-{i}, {source}, {1}\")\n",
     "data[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -81,11 +84,14 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13725438 276.44943503393824\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Total word count: 13725438; Average word count per sample: 276.44943503393824'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -99,16 +105,17 @@
     "Word count of corpus (8.9M words ~ strict-small track)\n",
     "\"\"\"\n",
     "total_word_count = sum([len(d['augmented_text'].split()) for d in data])\n",
-    "print(total_word_count, total_word_count / len(data))"
+    "log.append(f\"Total word count: {total_word_count}; Average word count per sample: {total_word_count / len(data)}\")\n",
+    "log[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus_size = \"13-7M\"\n",
+    "corpus_size = \"10M\"\n",
     "\"\"\"\n",
     "Save the pretraining corpus\n",
     "\"\"\"\n",
